--- a/cumulusairaisvc/deploy/operator.yaml
+++ b/cumulusairaisvc/deploy/operator.yaml
@@ -1,20 +1,20 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: cumulusbankaisvc
+  name: cumulusairaisvc
 spec:
   replicas: 1
   selector:
     matchLabels:
-      name: cumulusbankaisvc
+      name: cumulusairaisvc
   template:
     metadata:
       labels:
-        name: cumulusbankaisvc
+        name: cumulusairaisvc
     spec:
-      serviceAccountName: cumulusbankaisvc
+      serviceAccountName: cumulusairaisvc
       containers:
-        - name: cumulusbankaisvc
+        - name: cumulusairaisvc
           # Replace this with the built image name
           image: REPLACE_IMAGE
           imagePullPolicy: Always
@@ -28,4 +28,4 @@ spec:
                 fieldRef:
                   fieldPath: metadata.name
             - name: OPERATOR_NAME
-              value: "cumulusbankaisvc"
+              value: "cumulusairaisvc"
