--- a/cumulusairaisvc/deploy/crds/cumulusbank_v1alpha1_cumulusbankaisvc_crd.yaml
+++ b/cumulusairaisvc/deploy/crds/cumulusbank_v1alpha1_cumulusbankaisvc_crd.yaml
@@ -1,14 +1,14 @@
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
-  name: cumulusbankaisvcs.cumulusbank.com
+  name: cumulusairaisvcs.cumulusair.com
 spec:
-  group: cumulusbank.com
+  group: cumulusair.com
   names:
-    kind: CumulusBankAiSvc
-    listKind: CumulusBankAiSvcList
-    plural: cumulusbankaisvcs
-    singular: cumulusbankaisvc
+    kind: CumulusAirAiSvc
+    listKind: CumulusAirAiSvcList
+    plural: cumulusairaisvcs
+    singular: cumulusairaisvc
   scope: Namespaced
   subresources:
     status: {}
