--- a/cumulusairaisvc/deploy/role_binding.yaml
+++ b/cumulusairaisvc/deploy/role_binding.yaml
@@ -1,11 +1,11 @@
 kind: RoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: cumulusbankaisvc
+  name: cumulusairaisvc
 subjects:
 - kind: ServiceAccount
-  name: cumulusbankaisvc
+  name: cumulusairaisvc
 roleRef:
   kind: Role
-  name: cumulusbankaisvc
+  name: cumulusairaisvc
   apiGroup: rbac.authorization.k8s.io
