--- a/cumulusairaisvc/helm-charts/cumulusairaisvc/Chart.yaml
+++ b/cumulusairaisvc/helm-charts/cumulusairaisvc/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
 appVersion: "1.0"
 description: A Helm chart for Kubernetes
-name: cumulusbankaisvc
+name: cumulusaiaisvc
 version: 0.1.0
